--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <p class="w3-large w3-center">
-        We are a famous theatre based in the region of Livadia who see many famous playwrights and have been running for many(3000ish) years.
+        We are a famous theatre based in the region of Livadia who see many famous playwrights and have been running for many (3000ish) years.
     </p>
 
     <div style="text-align:center;" id="upcomingPlays">
@@ -284,7 +284,7 @@
     <!-- Footer -->
     <footer class="w3-row-padding w3-padding-32">
         <div class="w3-center">
-            <p>This infomation may not be 100% accurate, do take this as fact.</p>
+            <p>This infomation may not be 100% accurate, dont take this as fact.</p>
 
             <br>
 
